@@ -9,7 +9,8 @@ acmacs.r NEWS -- history of user-visible changes.
 ** remove layers (flatten) (chart$remove_layers())
 ** clone chart (chart$clone())
 ** create new projection with random layout (dimension annealing cannot be used) (chart$new_projection("none", 2))
-
+** projection$number_of_dimensions
+** set layout of projection to matrix (projection$layout <- matrix(c(0), nrow=chart$number_of_points, ncol=projection$number_of_dimensions))
 
 * Changes in 2.6 (2018-07-15)
 ** fixed bug in making procrustes between projections of the same chart
